--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'com.mapbox.maps:android:10.1.0'
     implementation "com.mapbox.navigation:android:2.0.2"
 
+    //Mapbox external dependencies
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
