--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 apply plugin: 'com.google.gms.google-services'
@@ -14,13 +16,13 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.philipcutting.letswalkabout"
+        applicationId 'com.philipcutting.letswalkabout'
         minSdk 24
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -53,7 +55,7 @@ dependencies {
 
     //Mapbox
     implementation 'com.mapbox.maps:android:10.1.0'
-    implementation "com.mapbox.navigation:android:2.0.2"
+    implementation 'com.mapbox.navigation:android:2.0.2'
 
     //Mapbox external dependencies
     implementation 'com.google.android.gms:play-services-location:18.0.0'
@@ -61,4 +63,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //ViewModel dependencies
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.4.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    implementation 'androidx.fragment:fragment-ktx:1.4.0'
+    debugImplementation 'androidx.fragment:fragment-testing:1.4.0'
+
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+
 }
