--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     //Mapbox
-    implementation 'com.mapbox.maps:android:10.2.0'
-    implementation 'com.mapbox.navigation:android:2.0.2'
+    implementation 'com.mapbox.maps:android:10.1.0'
+    implementation 'com.mapbox.navigation:android:2.1.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-geojson:6.1.0'
+    //Turf: Runtime geospatial calculations.
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:6.1.0'
+    //Core: Color, text, and networking utility classes
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-core:6.1.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     //Mapbox external dependencies
     implementation 'com.google.android.gms:play-services-location:19.0.0'
